@@ -352,6 +352,22 @@ MDCertificateAgreement https://letsencrypt.org/documents/LE-SA-v1.1.1-August-1-2
     </directivesynopsis>
 
     <directivesynopsis>
+        <name>MDNotifyCmd</name>
+        <description>Run a program when Managed Domain are ready.</description>
+        <syntax>MDNotifyCmd  path</syntax>
+        <contextlist>
+            <context>server config</context>
+        </contextlist>
+        <usage>
+            <p>The configured executable is run when Managed Domains have signed up or
+            renewed their certificates. It is given the names of the processed MDs as
+            arguments. It should return status code 0 to indicate that it has 
+            run successfully.
+            </p>
+        </usage>
+    </directivesynopsis>
+
+    <directivesynopsis>
         <name>MDPortMap</name>
         <description>Map external to internal ports for domain ownership verification.</description>
         <syntax>MDPortMap map1 [ map2 ]</syntax>
